# micro

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
email/: Dockerfile  pyproject.toml
email/core/: tasks.py
email/core/management/commands/: run_consumer.py
email/core/migrations/: 0001_initial.py
email/email_service/: asgi.py  consumer.py  settings.py  template.env  urls.py  wsgi.py
keycloak/: template.env
mq/: Dockerfile  definitions.json
nginx/: Dockerfile  default.conf
users/: Dockerfile  pyproject.toml
users/core/: admin.py  publisher.py  signals.py
users/core/management/commands/: create_admin.py
users/core/migrations/: 0001_initial.py
users/users/: settings.py  template.env  urls.py
