[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Filip Mularski <mularskif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
pika = "^1.3.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
